refactor: replace chunk.get() with chunk.getLast() for improved readability